2006-01-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/ObjectView.java: New file.

2006-01-26  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/plaf/basic/BasicTreeUI.java (MouseHandler.mousePressed): 
	Call startEditing when appropriate.
	(WAIT_TILL_EDITING, EDIT, startEditTimer): New fields.
	(startEditing): Always edit if directly ordered from 
	MouseHandler.mousePressed.
	* javax/swing/tree/DefaultTreeCellEditor.java (CLICK_COUNT_TO_START): 
	New field. (createTreeCellEditor): Set click count to start.
	(getTreeCellEditorComponent): Assing realEditor directly.

2006-01-25  Casey Marshall  <csm@gnu.org>

	Merging GNU Crypto and Jessie.

	* NEWS: mention the merge in the 0.21 notes.
	* gnu/classpath/debug/Component.java (SSL_APPLICATION): removed.
	(SSL_RECORD_LAYER): new constants.
	* gnu/java/security/provider/Gnu.java (<init>): add new algorithms
	to provider.
	* resource/java/security/classpath.security: add new providers.
	* gnu/javax/crypto/assembly/Assembly.java,
        gnu/javax/crypto/assembly/Cascade.java,
        gnu/javax/crypto/assembly/CascadeStage.java,
        gnu/javax/crypto/assembly/CascadeTransformer.java,
        gnu/javax/crypto/assembly/DeflateTransformer.java,
        gnu/javax/crypto/assembly/Direction.java,
        gnu/javax/crypto/assembly/LoopbackTransformer.java,
        gnu/javax/crypto/assembly/ModeStage.java,
        gnu/javax/crypto/assembly/Operation.java,
        gnu/javax/crypto/assembly/PaddingTransformer.java,
        gnu/javax/crypto/assembly/Stage.java,
        gnu/javax/crypto/assembly/Transformer.java,
        gnu/javax/crypto/assembly/TransformerException.java,
        gnu/javax/crypto/cipher/Anubis.java,
        gnu/javax/crypto/cipher/BaseCipher.java,
        gnu/javax/crypto/cipher/Blowfish.java,
        gnu/javax/crypto/cipher/Cast5.java,
        gnu/javax/crypto/cipher/CipherFactory.java,
        gnu/javax/crypto/cipher/DES.java,
        gnu/javax/crypto/cipher/IBlockCipher.java,